force-app/main/default/objects/APT_Agreement_Rate_Card__c/APT_Agreement_Rate_Card__c.object-meta.xml
<CustomObject>
    <label>Agreement Rate Card</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Agreement Rate Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Rate Card</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>