force-app/main/default/objects/APT_Agreement_Rate_Card__c/fields/APT_Agreement__c.field-meta.xml
<CustomField>
    <fullName>APT_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apttus Contract</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Agreement Rate Card</relationshipLabel>
    <relationshipName>Agreement_Rate_Card</relationshipName>
    <type>Lookup</type>
</CustomField>