force-app/main/default/objects/APT_Agreement_Rate_Card__c/fields/APT_Agreement_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>APT_Agreement_Line_Item__c</fullName>
    <label>Agreement Line Item</label>
    <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
    <relationshipLabel>Agreement Rate Card</relationshipLabel>
    <relationshipName>Agreement_Rate_Card</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>