force-app/main/default/objects/APT_Agreement_Rate_Card__c/fields/APT_Size__c.field-meta.xml
<CustomField>
    <fullName>APT_Size__c</fullName>
    <formula>IF(BEGINS(APT_Value_1__c , &quot;Small&quot;), 
&apos;Small Letter&apos; , 
IF(BEGINS(APT_Value_1__c , &quot;Large&quot;), 
&apos;Large&apos;, NULL))</formula>
    <label>Size</label>
    <type>Text</type>
</CustomField>