force-app/main/default/objects/APT_Agreement_Rate_Card__c/fields/APT_Value_2_with_Code_1__c.field-meta.xml
<CustomField>
    <fullName>APT_Value_2_with_Code_1__c</fullName>
    <formula>IF( AND(CONTAINS(APT_Value_1__c , &apos;1&apos;),CONTAINS(APT_Agreement_Line_Item__r.APT_Price_Structure__c , &apos;Z30&apos;)) , APT_Value_2__c, IF(AND(CONTAINS(APT_Value_1__c , &apos;0&apos;),CONTAINS(APT_Agreement_Line_Item__r.APT_Price_Structure__c , &apos;Z40&apos;)) , APT_Value_2__c,&apos;&apos;) )</formula>
    <label>Value 2 with Code 1</label>
    <type>Text</type>
</CustomField>