force-app/main/default/objects/APT_Agreement_Rate_Card__c/fields/APT_Value_31__c.field-meta.xml
<CustomField>
    <fullName>APT_Value_31__c</fullName>
    <label>Value 31</label>
    <type>TextArea</type>
</CustomField>