force-app/main/default/objects/APT_Agreement_Rate_Card__c/fields/APT_Value_9_Currency_3_decimal__c.field-meta.xml
<CustomField>
    <fullName>APT_Value_9_Currency_3_decimal__c</fullName>
    <formula>VALUE( APT_Value_9__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value 9(Currency 3 decimal)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>